--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "eslint": "^8.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1"
+  },
+  "dependencies": {
+    "commander": "^8.3.0"
   }
 }
