--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-promise": "^5.1.1"
   },
   "dependencies": {
-    "commander": "^8.3.0"
+    "commander": "^8.3.0",
+    "inquirer": "^8.2.0"
   }
 }
