--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-promise": "^5.1.1"
   },
   "dependencies": {
+    "cli-table": "^0.3.6",
     "commander": "^8.3.0",
     "inquirer": "^8.2.0"
   }
