--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "chalk": "^4.1.2",
     "commander": "^8.3.0",
-    "inquirer": "^8.2.0",
-    "log-symbols": "^5.0.0"
+    "inquirer": "^8.2.0"
   }
 }
