--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "bitbucket-multi-repo-management",
   "version": "0.1.0",
   "description": "A node.js console application that manages multiple git repositories in Bitbucket Cloud via the Bitbucket API.",
-  "main": "src/index.js",
+  "main": "bin/console.js",
   "repository": "git@github.com:srt4rulez/bitbucket-multi-repo-management.git",
   "author": "Jake Dennison <srt4rulez@gmail.com>",
   "license": "MIT",
   "private": true,
   "type": "module",
+  "bin": "./bin/console.js",
   "scripts": {
-    "server": "node src/index.js",
+    "server": "node bin/console.js",
     "serve": "yarn run server",
     "s": "yarn run server",
     "lint": "eslint './src' --quiet --color --cache --cache-location './node_modules/.cache/'",
