--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "bitbucket-multi-repo-management",
+  "name": "@srt4rulez/bitbucket-multi-repo-management",
   "version": "0.1.0",
   "description": "A node.js console application that manages multiple git repositories in Bitbucket Cloud via the Bitbucket API.",
   "main": "bin/console.js",
-  "repository": "git@github.com:srt4rulez/bitbucket-multi-repo-management.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/srt4rulez/bitbucket-multi-repo-management.git"
+  },
   "author": "Jake Dennison <srt4rulez@gmail.com>",
   "license": "MIT",
   "private": true,
   "type": "module",
-  "bin": "./bin/console.js",
+  "bin": {
+    "bitbucket-multi-repo-management": "bin/console.js"
+  },
   "scripts": {
     "server": "node bin/console.js",
     "serve": "yarn run server",
@@ -26,5 +31,18 @@
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "inquirer": "^8.2.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/srt4rulez/bitbucket-multi-repo-management/issues"
+  },
+  "homepage": "https://github.com/srt4rulez/bitbucket-multi-repo-management#readme",
+  "keywords": [
+    "console",
+    "cli",
+    "bitbucket",
+    "git",
+    "multi",
+    "repo",
+    "repository"
+  ]
 }
