--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "semver": "^7.3.5"
   }
 }
