--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
+    "cosmiconfig": "^7.0.1",
     "inquirer": "^8.2.0",
     "semver": "^7.3.5"
   }
